# opcua-line-gateway

./: .editorconfig  .gitignore  Cargo.toml  README.md  checkmake.ini  hk.pkl  mise.toml
.cargo/: config.toml
.helix/: languages.toml
crates/config/: Cargo.toml
crates/config/src/: ascii_text.rs  foreign.rs  lib.rs
crates/gateway-bjc3/: Cargo.toml
crates/gateway-core/: Cargo.toml
crates/gateway-types-bjc3/: Cargo.toml
crates/opcua-types/: Cargo.toml  build.rs
crates/opcua-types/schemas/: SiOME Nodeset.xml
crates/opcua-types/src/: lib.rs
crates/toml2modeldesign/: Cargo.toml
crates/toml2modeldesign/src/: lib.rs  main.rs
crates/toml2modeldesign/templates/: modeldesign.xml
crates/toml2modeldesign/tests/: integration.rs
crates/toml2modeldesign/tests/snapshot/: expected.xml
crates/xtask-generate-config-schema/: Cargo.toml
crates/xtask-generate-config-schema/src/: main.rs
schema/: config.schema.json
schemas/: Makefile  README.md  opc-object-type.schema.json
src/: main.rs  timezone.rs
src/opcua/: client.rs  data_value.rs  mod.rs  session.rs  session_manager.rs  traceability.rs
src/opcua/traceability/: cache.rs  errors.rs  mod.rs  part_id.rs  protocol.rs
