[package]
name = "opcua-line-gateway"
version.workspace = true
edition.workspace = true
description = "OPC-UA gateway for production line"
publish.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.103"
async-opcua = "0.18.0"
thiserror = "2.0.18"

[dependencies]
anyhow.workspace = true
async-opcua = { workspace = true, features = ["client"] }
opcua-line-gateway-config = { path = "crates/config" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
