[package]
name = "opcua-line-gateway"
version.workspace = true
edition.workspace = true
description = "OPC-UA gateway for production line"
publish.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.103"
async-opcua = "0.18.0"
thiserror = "2.0.18"

[dependencies]
anyhow.workspace = true
async-opcua = { workspace = true, features = ["client"] }
futures-util = "0.3.32"
opcua-line-gateway-config = { path = "crates/config" }
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
signal-hook = { version = "0.4.4", default-features = false }
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
