[package]
name = "opcua-line-gateway"
version.workspace = true
edition.workspace = true
description = "OPC-UA gateway for production line"
publish.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.103"
async-opcua = "0.19.0"
jiff = "0.2.34"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dependencies]
anyhow.workspace = true
async-opcua = { workspace = true, features = ["client"] }
futures-util = "0.3.32"
jiff.workspace = true
opcua-line-gateway-config = { path = "crates/config" }
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
redb = "4.1.0"
regex = "1.13.1"
signal-hook = { version = "0.4.4", default-features = false }
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
