[package]
name = "opcua-line-gateway-config"
version.workspace = true
edition.workspace = true
description = "OPC-UA line gateway configuration"
publish.workspace = true

[dependencies]
anyhow.workspace = true
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror.workspace = true

[dependencies.toml]
version = "1.1.2"
default-features = false
features = ["parse", "serde", "std"]
