[package]
name = "opcua-line-gateway-config"
version.workspace = true
edition.workspace = true
description = "OPC-UA line gateway configuration"
publish.workspace = true

[dependencies]
async-opcua = { workspace = true, features = ["client"] }
jiff = { version = "0.2.32", features = ["serde"] }
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dependencies.toml]
version = "1.1.2"
default-features = false
features = ["parse", "serde", "std"]
