[package]
name = "toml2modeldesign"
version = "1.0.0"
edition.workspace = true
description = "Convert TOML descriptions of OPC-UA object types to UA model design"
publish.workspace = true

[dependencies]
askama = "0.16.0"
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
urn = "0.7.0"

[dev-dependencies]
snapbox = "1.2.2"
